agregando sass/solo falta contacto

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,8 +9,10 @@
 @import 'caja';
 @import 'sociales';
 @import 'end';
-
+@import 'centro';
 @import 'media';
+@import 'acordeon';
+@import 'form';
 /* fin de estilos del index */
 
 
