--- a/sass/styles.css
+++ b/sass/styles.css
@@ -167,10 +167,84 @@
   color: white;
 }
 
+.centro__art {
+  background-color: whitesmoke;
+  padding: 5%;
+  font-family: sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 5%;
+}
+
+.centro__art h2 {
+  font-size: 3rem;
+  margin-bottom: 10%;
+  text-align: center;
+}
+
+.centro__art p {
+  font-size: 1rem;
+}
+
+.centro__art2 {
+  background-color: whitesmoke;
+  padding: 5%;
+  font-family: sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 5%;
+}
+
+.centro__art2 h2 {
+  font-size: 3rem;
+  margin-bottom: 10%;
+  text-align: center;
+}
+
+.centro__art2 p {
+  font-size: 1rem;
+}
+
 @media (min-width: 992px) {
   .header .header__title h1 {
     font-size: 4rem;
   }
+}
+
+.acordeon {
+  margin-top: 10%;
+}
+
+.acordeon__frecuentes h2 {
+  font-size: 2rem;
+  font-family: sans-serif;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.form {
+  margin-top: 10%;
+}
+
+.form h2 {
+  font-size: 2rem;
+  font-family: sans-serif;
+  text-align: center;
+  margin-bottom: 5%;
 }
 
 /* fin de estilos del index */
