--- a/sass/_caja.scss
+++ b/sass/_caja.scss
@@ -1,8 +1,10 @@
+@import 'mapa';
+
 .caja{
     &__turnos{
         text-align: center;
         font-family: sans-serif;
-        background-color: whitesmoke;
+        background-color: map-get($color, 1 );
         display: flex;
         flex-direction: column;
         margin-top: 20%;
@@ -29,6 +31,7 @@
 
             img{
                 width: 20%;
+                height: auto;
             }
             h3{
                 color: black;
