--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,3 +1,5 @@
+@import 'mixin';
+
 .form{
     margin-top: 10%;
         h2{
@@ -5,5 +7,9 @@
             font-family: sans-serif;
             text-align: center;
             margin-bottom: 5%;
+        }
+
+        button{
+            @include boton;
         }
 }
