--- a/sass/styles.css
+++ b/sass/styles.css
@@ -3,7 +3,6 @@
   padding: 0%;
 }
 
-/* estilos del index */
 .header__logo {
   width: 40%;
 }
@@ -23,7 +22,7 @@
   font-size: 130%;
 }
 
-.box__article {
+.box__article, .box__article2 {
   border: 1px solid black;
   padding: 2%;
   background-color: cadetblue;
@@ -35,14 +34,7 @@
 }
 
 .box__article2 {
-  border: 1px solid black;
-  padding: 2%;
   background-color: #3737ce;
-  color: azure;
-  font-family: sans-serif;
-  text-align: center;
-  height: 100%;
-  margin-top: 10%;
 }
 
 .caja__turnos {
@@ -87,6 +79,7 @@
 
 .caja__wp img {
   width: 20%;
+  height: auto;
 }
 
 .caja__wp h3 {
@@ -167,7 +160,7 @@
   color: white;
 }
 
-.centro__art {
+.centro__art, .centro__art2 {
   background-color: whitesmoke;
   padding: 5%;
   font-family: sans-serif;
@@ -183,30 +176,14 @@
   margin-top: 5%;
 }
 
-.centro__art h2 {
+.centro__art h2, .centro__art2 h2 {
   font-size: 3rem;
   margin-bottom: 10%;
   text-align: center;
 }
 
-.centro__art p {
+.centro__art p, .centro__art2 p {
   font-size: 1rem;
-}
-
-.centro__art2 {
-  background-color: whitesmoke;
-  padding: 5%;
-  font-family: sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-top: 5%;
 }
 
 .centro__art2 h2 {
@@ -247,5 +224,10 @@
   margin-bottom: 5%;
 }
 
-/* fin de estilos del index */
+.form button {
+  padding: 1%;
+  border: 1px solid black;
+  border-radius: 5%;
+  margin-bottom: 5%;
+}
 /*# sourceMappingURL=styles.css.map */
