--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -2,6 +2,10 @@
 
 .form{
     margin-top: 10%;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
         h2{
             font-size: 2rem;
             font-family: sans-serif;
