--- a/sass/styles.css
+++ b/sass/styles.css
@@ -173,7 +173,7 @@
           flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin-top: 5%;
+  margin-top: 20%;
 }
 
 .centro__art h2, .centro__art2 h2 {
@@ -215,6 +215,16 @@
 
 .form {
   margin-top: 10%;
+  max-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .form h2 {
@@ -229,5 +239,20 @@
   border: 1px solid black;
   border-radius: 5%;
   margin-bottom: 5%;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 10%;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 /*# sourceMappingURL=styles.css.map */
