--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,7 +8,7 @@
         border: 3px solid black;
             h1{
                 text-align: center;
-                font-size: 2rem;
+                font-size: 50px;
                 color: cadetblue;
                 padding: 5%;
             }
