--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1,8 +1,10 @@
 .cards{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10%;
     margin-top: 10%;
-    margin-bottom: 10%;
+    justify-content: center;
+    align-items: center;
+      &__1{
+
+      }
 }
+
