--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -10,6 +10,18 @@
 }
 
 
-@media (max-width:992px){
+@media (max-width:576px){
 
+
+    .cards{
+        padding-left: 20%;
+    }   
+}
+
+
+@media (max-width:410px){
+
+    .cards{
+        padding-left: 10%;
+    }
 }
