--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -4,4 +4,19 @@
     justify-content: center;
     align-items: center;
     align-self: center;
+
+    &__1:hover{
+        transform: scale(1.1);
+        transition: 2s;
+    }
+
+    &__2:hover{
+        transform: scale(1.1);
+        transition: 2s;
+    }
+
+    &__3:hover{
+        transform:scale(1.1);
+        transition: 2s;
+    }
 }
