--- a/sass/_centro.scss
+++ b/sass/_centro.scss
@@ -10,9 +10,10 @@
         flex-direction: column;
         justify-content: space-around;
         margin-top: 20%;
+        min-height: 100%;
+
             h2{
                 font-size: 3rem;
-                margin-bottom: 10%;
                 text-align: center;
             }
 
@@ -26,7 +27,6 @@
 
         h2{
             font-size: 3rem;
-            margin-bottom: 10%;
             text-align: center;
         }
 
