--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -6,6 +6,7 @@
         flex-direction: column;
         text-align: center;
             h2{
+                border: 1px  black solid;
                 margin-bottom: 10%;
                 font-size: 3rem;
                 font-family: sans-serif;
