--- a/sass/_centro.scss
+++ b/sass/_centro.scss
@@ -1,7 +1,9 @@
 @import 'mapa';
 
 .centro{
-
+    margin-top: 10%;
+    background-image: url(https://riodm.com/wp-content/uploads/2019/08/shutterstock_1054661900.jpg);
+    background-position: 100%;
     &__art{
         background-color: whitesmoke;
         padding: 5%;
@@ -10,10 +12,11 @@
         flex-direction: column;
         justify-content: space-around;
         margin-top: 20%;
-        min-height: 100%;
-
+        min-height: 70%;
+        margin-bottom: 10%;
             h2{
                 font-size: 3rem;
+                margin-bottom: 10%;
                 text-align: center;
             }
 
@@ -27,6 +30,7 @@
 
         h2{
             font-size: 3rem;
+            margin-bottom: 10%;
             text-align: center;
         }
 
