--- a/sass/styles.css
+++ b/sass/styles.css
@@ -160,6 +160,12 @@
   color: white;
 }
 
+.centro {
+  margin-top: 10%;
+  background-image: url(https://riodm.com/wp-content/uploads/2019/08/shutterstock_1054661900.jpg);
+  background-position: 100%;
+}
+
 .centro__art, .centro__art2 {
   background-color: whitesmoke;
   padding: 5%;
@@ -174,11 +180,13 @@
   -ms-flex-pack: distribute;
       justify-content: space-around;
   margin-top: 20%;
-  min-height: 100%;
+  min-height: 70%;
+  margin-bottom: 10%;
 }
 
 .centro__art h2, .centro__art2 h2 {
   font-size: 3rem;
+  margin-bottom: 10%;
   text-align: center;
 }
 
@@ -188,6 +196,7 @@
 
 .centro__art2 h2 {
   font-size: 3rem;
+  margin-bottom: 10%;
   text-align: center;
 }
 
