agregando fondos a frecuentes y form

--- a/sass/_acordeon.scss
+++ b/sass/_acordeon.scss
@@ -6,6 +6,13 @@
                 font-family: sans-serif;
                 text-align: center;
                 margin-bottom: 5%;
+                color: white;
             }
         }
+}
+
+.bgi{
+    background-image: url(https://fondosmil.com/fondo/65206.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
