--- a/sass/_acordeon.scss
+++ b/sass/_acordeon.scss
@@ -1,12 +1,13 @@
 .acordeon{
-    margin-top: 10%;
+    margin-top: 1%;
         &__frecuentes{
-            h2{
+            h3{ 
                 font-size: 2rem;
                 font-family: sans-serif;
                 text-align: center;
                 margin-bottom: 5%;
                 color: white;
+                padding-top: 10%;
             }
         }
 }
