--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,6 +1,6 @@
 @import 'mixin';
 
-.form{
+.form2{
     margin-top: 10%;
     display: flex;
     justify-content: center;
@@ -10,6 +10,7 @@
             font-family: sans-serif;
             text-align: center;
             margin-bottom: 5%;
+            color: white;
         }
 
         button{
