--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,10 +6,14 @@
 
     & &__title{
         border: 3px solid black;
+        background-image: url(https://cdn.pixabay.com/photo/2015/08/23/09/19/banner-902580_960_720.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+
             h1{
                 text-align: center;
                 font-size: 50px;
-                color: cadetblue;
+                color: whitesmoke;
                 padding: 5%;
             }
     }
