--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -24,6 +24,6 @@
 }
 
 .bgicards{
-    background-image:linear-gradient(to bottom, white, white, white, blue, white, white, white) ;
+    background-image:linear-gradient(to bottom, rgb(53, 99, 162), white, rgb(53, 99, 162), white, rgb(53, 99, 162)) ;
 
 }
