--- a/sass/_centro.scss
+++ b/sass/_centro.scss
@@ -8,7 +8,7 @@
 .centro{
     background-position: 100%;
     &__art{
-        background-color: whitesmoke;
+        background-color: lightskyblue;
         padding: 5%;
         font-family: sans-serif;
         display: flex;
