--- a/sass/_end.scss
+++ b/sass/_end.scss
@@ -17,6 +17,9 @@
 .footer{
     background-color: black;
     text-align: center;
+    height: 100%;
+    margin-bottom: -10%;
+
         p{
             color: white;
         }
