--- a/sass/_caja.scss
+++ b/sass/_caja.scss
@@ -32,7 +32,8 @@
 
             img{
                 width: 20%;
-                height: auto;
+                height: 20%;
+                padding-top: 10%;
             }
             h3{
                 color: black;
